--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 
 {
-  "name": "Tanzine Finance",
-  "short_name": "Tanzine",
+  "name": "Lopes Finance",
+  "short_name": "Lopes",
   "description": "Premium Mobile-First Personal Finance Manager",
   "start_url": "/",
   "display": "standalone",
