--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,15 @@
+
 {
   "name": "Lopes Finance",
   "short_name": "Lopes",
-  "description": "Premium Mobile-First Personal Finance Manager by Brunotech",
+  "description": "Premium Mobile-First Personal Finance Manager",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#000B3D",
-  "theme_color": "#000B3D",
+  "background_color": "#0C0B40",
+  "theme_color": "#0C0B40",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/10543/10543317.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
