--- a/manifest.json
+++ b/manifest.json
@@ -16,3 +16,39 @@
     }
   ]
 }
+{
+  "name": "Lopes Finance",
+  "short_name": "Lopes",
+  "description": "Premium Mobile-First Personal Finance Manager",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#0C0B40",
+  "theme_color": "#0C0B40",
+  "icons": [
+    {
+      "src": "/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/maskable-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/maskable-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "scope": "/"
+}
